# ai-agent-rag

./: .env.example  .gitignore  GEMINI.md  README.md  _all_project_code.txt  docker-compose.yml  main.py  merge_code.py  pyproject.toml  sample_ingest.md  test_confidence.py  test_routing.py
.gemini/: rules.md
adapters/tools/: calculator.py  retrieval_tool.py
api/: main.py
api/routers/: ingest.py
application/agents/: graph.py  (+2 more)
config/: settings.py
docs/: EVALUATION.md  PROJECT_ONE_PAGER.md  PROJECT_ONE_PAGER_v1.1.md  PROJECT_ONE_PAGER_v1.5.md  configuration.md  implementation_2.5plan.md  observability.md  phase-evolution.md  phase2-5-design.md  phase2-production-rag.md  phase3-agentic-retrieval-v2.md  project-structure.md  sprint3_retrieval_complex_optimization_design.md  structured_query_design.md  walkthrough2.5.md
evaluation/: aggregator.py  dataset.json  evaluate.py  reporter.py  schema.py
prompts/: compare_generate.yaml
scripts/: benchmark_compare.py  benchmark_router.py
tests/: test_compare_intent.py  test_compare_pipeline.py  test_critic_fallbacks.py  test_direct_calc_routing.py  test_evaluation.py  test_heuristic_router.py  test_prompt_loader.py  test_prompt_sync.py  test_reporter.py  test_retrieval_complex_budget.py  test_retrieval_complex_fallback.py  test_router_service.py  test_sqlite_structured_query_datasource.py  test_structured_query_router.py  test_structured_query_sql_builder.py  test_structured_query_sqlite_execution.py  test_structured_query_tool.py  test_structured_query_validator.py
tools/: __init__.py  sync_prompts_from_hub.py
(+57 files in other folders)
