[project]
name = "ai-agent-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-postgres>=0.0.12",
    "langchainhub>=0.1.21",
    "langgraph>=1.1.1",
    "markdown>=3.10.2",
    "pgvector>=0.3.0",
    "psycopg-pool>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.48",
    "unstructured>=0.21.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
